# depth-sensing-algo

./: .gitignore  CNN_notebook.ipynb  CNN_results_notebook.ipynb  CNN_script.py  Dockerfile  README.md  Visao_estereo_CVN_Rec.ipynb  atualiz__Visao_estereo_CVN_Rec.ipynb  atualiz__visao_estereo_cvn_rec.py  batch_pics.py  calibrator.py  camera_resolution.py  checkpoint  download_pics.py  history.json  main.py  main_website.py  max_disp.csv  move_stuff.sh  port_test.py  pyproject.toml  requirements.txt  res.py  results.py  rna_stereo_CVN_REC_weigths.index
ZED-tests/: fooling_around  test2.py  test3.py
__MACOSX/: ._Final_pics
__MACOSX/Final_pics/: ._left
calib/: change_ext.sh
demonstration/: Plot.py  max_disp.csv  predict_loop.py  predict_test.py  rna_stereo_CVN_REC_weigths_close.index
josue/: rna_stereo_CVN_REC_weigths.index
picture_api/: app.py  controllers.py  main.py  routes.py
picture_api/templates/: capture.html  capture_form.html  captured.html  styles.css
picture_api/utils/: __init__.py  image_utils.py
tests/: test_cali.py  test_cameras.py  test_dom.py
