[tool.poetry]
name = "depth-sesing-algo"
version = "0.1.0"
description = ""
authors = ["julialva <julio.alvarez@neofield.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.1"
opencv-python = "^4.5.5"
pyzed = { file = "/usr/local/zed/pyzed-3.7-cp39-cp39-linux_x86_64.whl" }
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]
matplotlib = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"